For replaced by stream